<resources>
    <string name="app_name">LearningTask4.1</string>
    <string name="app">MATH PROBLEM SOLVER</string>
    <string name="first">FIRST VALUE</string>
    <string name="second">SECOND VALUE</string>
    <string name="third">THIRD VALUE</string>
    <string name="total">RESULT</string>
    <string name="txt_compute_result">Result(s)</string>
    <string name="txt_close">Close</string>
</resources>